Add markdown sections for Close Prices vs Log Returns and Price Movement Distribution; fix AttributeError in price movement plotting function

--- a/src/stocks/3_stocks_EDA.ipynb
+++ b/src/stocks/3_stocks_EDA.ipynb
@@ -106,6 +106,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6710da26",
+   "metadata": {},
+   "source": [
+    "## Close Prices vs Log Returns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "0d2410e2",
@@ -242,6 +250,71 @@
     "\n",
     "# Create one figure per ticker with two plots and save\n",
     "plot_each_ticker_two_panels(stock_data, save_dir='plots/stocks')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "166e177d",
+   "metadata": {},
+   "source": [
+    "## Distribución Precio (Sube-Baja-Mantiene)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "063f6811",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pandas' has no attribute 'np'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 35\u001b[0m\n\u001b[1;32m     32\u001b[0m         plt\u001b[38;5;241m.\u001b[39mshow()\n\u001b[1;32m     34\u001b[0m \u001b[38;5;66;03m# Create bar plots for price movement distribution\u001b[39;00m\n\u001b[0;32m---> 35\u001b[0m \u001b[43mplot_price_movement_distribution\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstock_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mthreshold\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mthreshold\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[30], line 20\u001b[0m, in \u001b[0;36mplot_price_movement_distribution\u001b[0;34m(stock_dict, threshold)\u001b[0m\n\u001b[1;32m     15\u001b[0m conditions \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     16\u001b[0m     (df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLOG_RETURN\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m>\u001b[39m threshold),\n\u001b[1;32m     17\u001b[0m     (df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLOG_RETURN\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m-\u001b[39mthreshold)\n\u001b[1;32m     18\u001b[0m ]\n\u001b[1;32m     19\u001b[0m choices \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUp\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDown\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m---> 20\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrice_Movement\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mSeries(\u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mselect(conditions, choices, default\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStable\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Count occurrences\u001b[39;00m\n\u001b[1;32m     23\u001b[0m movement_counts \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrice_Movement\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalue_counts()\u001b[38;5;241m.\u001b[39mreindex([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUp\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDown\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStable\u001b[39m\u001b[38;5;124m'\u001b[39m], fill_value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'np'"
+     ]
+    }
+   ],
+   "source": [
+    "threshold = 0.002\n",
+    "def plot_price_movement_distribution(stock_dict, threshold=0.002):\n",
+    "    \"\"\"For each ticker create a bar plot showing the distribution of price movements:\n",
+    "       - 'Up' if LOG_RETURN > threshold\n",
+    "       - 'Down' if LOG_RETURN < -threshold\n",
+    "       - 'Stable' otherwise\n",
+    "       Saves each figure to save_dir/{TICKER}_price_movement_distribution.png\n",
+    "    \"\"\"\n",
+    "\n",
+    "    for ticker, df in stock_dict.items():\n",
+    "        if 'LOG_RETURN' not in df.columns:\n",
+    "            continue\n",
+    "\n",
+    "        # Classify movements\n",
+    "        conditions = [\n",
+    "            (df['LOG_RETURN'] > threshold),\n",
+    "            (df['LOG_RETURN'] < -threshold)\n",
+    "        ]\n",
+    "        choices = ['Up', 'Down']\n",
+    "        df['Price_Movement'] = pd.Series(np.select(conditions, choices, default='Stable'))\n",
+    "\n",
+    "        # Count occurrences\n",
+    "        movement_counts = df['Price_Movement'].value_counts().reindex(['Up', 'Down', 'Stable'], fill_value=0)\n",
+    "\n",
+    "        # Plotting\n",
+    "        fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "        movement_counts.plot(kind='bar', color=['green', 'red', 'gray'], ax=ax)\n",
+    "        ax.set_title(f'{ticker} - Price Movement Distribution')\n",
+    "        ax.set_ylabel('Count')\n",
+    "        ax.set_xlabel('Price Movement')\n",
+    "        ax.grid(True, axis='y', alpha=0.3)\n",
+    "        plt.show()\n",
+    "\n",
+    "# Create bar plots for price movement distribution\n",
+    "plot_price_movement_distribution(stock_data, threshold=threshold)"
    ]
   }
  ],
