--- a/src/stocks/3_stocks_EDA.ipynb
+++ b/src/stocks/3_stocks_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f0bc1b9d",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
     "import math\n",
+    "import numpy as np\n",
     "import os"
    ]
   },
@@ -334,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
